# aoc_2021

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  day_template.py.in  pyproject.toml
aoc_2015/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day22_broken.py  day23.py  day24.py  day25.py
aoc_2016/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
aoc_2020/: __init__.py  day01.py
aoc_2021/: __init__.py  bitarray.py  day01.py  day02.py  day03.py  day04.py  day04reddit.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day20_slow.py  day21.py
aoc_runner/: cli.py
